--- a/Guestbook/public/index.html
+++ b/Guestbook/public/index.html
@@ -19,7 +19,7 @@
         <input type="email" name ="email"> <br>
         <label for="">Comment:</label>
         <br>
-        <textarea name="meddelande"></textarea><br>
+        <textarea name="comment"></textarea><br>
         <input type="submit">
     </form>
     </div>
@@ -27,7 +27,6 @@
     <hr>    
     <div id="commentsHtml">
         <h3>Inlägg</h3>
-        <p>Kommentarer</p>
     </div>
 
 </body>
