--- a/Chat-Sockets/index.html
+++ b/Chat-Sockets/index.html
@@ -68,26 +68,43 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        var socket = io();
 
-        var messages = document.getElementById('messages');
-        var form = document.getElementById('form');
-        var input = document.getElementById('input');
+        const messages = document.getElementById('messages');
+        const form = document.getElementById('form');
+        const input = document.getElementById('input');
 
-        form.addEventListener('submit', function (e) {
-            e.preventDefault();
-            if (input.value) {
-                socket.emit('chat message', input.value);
-                input.value = '';
-            }
-        });
+        const userNamePrompt = prompt("Enter a username: ")
+        console.log("Hej!");
 
-        socket.on('chat message', function (msg) {
-            var item = document.createElement('li');
+        const socket = io(undefined, {query: {userName: userNamePrompt }}); // Tar imot en URL, den andra parametern är optional och heter query. I denna Query kan vi skicka med vid första anslutningen.
+
+        function addChatMessage(msg){ // Sker på klient sidan.
+            var item = document.createElement("li");
             item.textContent = msg;
             messages.appendChild(item);
             window.scrollTo(0, document.body.scrollHeight);
+        }
+
+        form.addEventListener("submit", function (e) {
+            e.preventDefault();
+
+            if ( input.value.match(/^\s+$/g)) {  // Om chat message är bara whitespace så kommer den inte skriva ut. 
+
+                input.value = "";
+            }
+            else if ( input.value )
+            {
+                const msg = ": " + input.value.replace(/\s{2,}/g, " ") // Tar bort alla extra white spaces.
+                socket.emit( "chat message", userNamePrompt + msg );
+                addChatMessage("Me" + msg); // Detta syns på klient sidan. "Me:  Hejsan"
+                input.value = "";
+            }
+
         });
+
+        socket.on('chat message', addChatMessage);
+
+        
     </script>
 </body>
 
